<resources>
    <string name="app_name">UberOfCleanWater</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_button">Register</string>
    <string name="username_tv">Username:</string>
    <string name="register_tv">Register:</string>
    <string name="password_tv">Password:</string>
    <string name="login_bttn">Login</string>
    <string name="welcome_to_the_uber_of_clean_water">Welcome to the Uber of Clean Water!</string>
    <string name="logout">logout</string>
    <string name="not_registered_yet_click_here_to_register">Not registered yet? Click here to register</string>
    <string name="register">Register</string>
    <string name="return_to_login">Return to login</string>
    <string name="login_below">Login Below</string>
    <string name="please_select_your_preferred_username_password_and_account_type">Please select your preferred username, password, and account type</string>
    <string name="user">User</string>
    <string name="worker">Worker</string>
    <string name="manager">Manager</string>
    <string name="admin">Admin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_can_edit_your_profile_anytime">You can edit your profile anytime!</string>
    <string name="save_changes">Save Changes</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="title">Title:</string>
    <string name="name">Name:</string>
    <string name="water_condition">Water condition</string>
    <string name="submit">Submit</string>
    <string name="water_type">Water type</string>
    <string name="_0_00">0.00</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="submit_water_report">Submit Water Report</string>
    <string name="cancel">Cancel</string>
    <string name="view_current_reports">View Current Reports</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">View Map</string>
    <string name="submit_purity_report">Submit Purity Report</string>
    <string name="purity_condition">Purity Condition</string>
    <string name="contaminantppm">ContaminantPPM</string>
    <string name="virusppm">VirusPPM</string>
    <string name="view_purity_reports">View Purity Reports</string>
    <string name="incomplete_profile_prompt">Your profile is incomplete!  Please click below</string>
    <string name="view_history_graph">View History Graph</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="contaminant_ppm">Contaminant ppm</string>
    <string name="year">Year:</string>
    <string name="graph_latitude">Latitude</string>
    <string name="graph_longitude">Longitude</string>
    <string name="enter_your_graph_settings">Enter your graph settings</string>
    <string name="within">Within</string>
    <string name="degrees_of">degrees of</string>
    <string name="update">Update</string>
</resources>
