<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a2340.uberofcleanwater.controller.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/welcome_to_the_uber_of_clean_water"
        android:id="@+id/welcome_tv"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_profile_bttn"
        android:layout_centerHorizontal="true"
        android:text="@string/you_can_edit_your_profile_anytime"
        android:id="@+id/edit_profile_tv"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/edit_profile"
        android:onClick="editProfileOnClick"
        android:id="@+id/edit_profile_bttn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp"
        android:text="@string/logout"
        android:onClick="logoutOnClick"
        android:id="@+id/logout_tv"
        android:clickable="true"
        android:textColor="@android:color/holo_blue_bright" />

    <Button
        android:text="@string/submit_water_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_bttn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="submitReportOnClick"
        android:id="@+id/submit_bttnn" />

    <Button
        android:text="@string/view_current_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_bttnn"
        android:layout_centerHorizontal="true"
        android:onClick="viewReportsOnclick"
        android:id="@+id/viewreports_bttn"/>

</RelativeLayout>
