<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a2340.uberofcleanwater.controller.ViewHistoryGraphActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_graph_settings"
        android:textSize="22sp"
        android:id="@+id/settings_prompt_tv"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_prompt_tv"
        android:id="@+id/graph_year_ll">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/graph_year_et"
            android:text="@string/year"/>

        <EditText
            android:id="@+id/graph_year_et"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph_year_ll"
        android:id="@+id/ppm_type_rg">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virus_ppm"
            android:checked="true"
            android:id="@+id/virus_ppm_rb"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contaminant_ppm"
            android:id="@+id/contaminant_ppm_rb"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ppm_type_rg"
        android:layout_centerHorizontal="true"
        android:id="@+id/proximity_ll">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/within"/>
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/proximity_et"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees_of"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_latitude"
        android:layout_below="@id/proximity_ll"
        android:id="@+id/graph_latitude_tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph_latitude_tv"
        android:orientation="horizontal"
        android:id="@+id/graph_latitude_ll">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/_0_00"
            android:maxEms="10"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:id="@+id/graph_latitude_et"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="bottom"
            android:id="@+id/graph_latitude_spinner"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_longitude"
        android:layout_below="@id/graph_latitude_ll"
        android:id="@+id/graph_longitude_tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph_longitude_tv"
        android:orientation="horizontal"
        android:id="@+id/graph_longitude_ll">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/_0_00"
            android:maxEms="10"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:id="@+id/graph_longitude_et"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="bottom"
            android:id="@+id/graph_longitude_spinner"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="updateGraph"
        android:layout_below="@id/graph_longitude_ll"
        android:text="@string/update"
        android:id="@+id/update_graph_bttn"/>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/history_graph_barchart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/update_graph_bttn"/>
</RelativeLayout>
