<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a2340.uberofcleanwater.controller.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/username_ll"
        android:paddingBottom="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/login_below"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_ll"
        android:id="@+id/username_ll">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/username_tv"
            android:id="@+id/username_tv"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_et"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_ll"
        android:layout_above="@+id/login_bttn"
        android:layout_alignParentStart="true">
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/password_tv"
            android:id="@+id/password_tv"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_et"
            android:maxLines="1"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login_bttn"
        android:onClick="loginOnClick"
        android:id="@+id/login_bttn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_yet_click_here_to_register"
        android:id="@+id/registration_prompt_tv"
        android:layout_below="@+id/login_bttn"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_bright"
        android:onClick="registerOnClick"/>
</RelativeLayout>