<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/submit_purity_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/headline_tv"/>

    <TextView
        android:text="@string/purity_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_tv"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:id="@+id/purity_condition_tv"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purity_condition_tv"
        android:layout_alignParentStart="true"
        android:id="@+id/purity_condition_spinner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purity_condition_spinner"
        android:layout_marginTop="33dp"
        android:orientation="horizontal"
        android:id="@+id/ppm_ll">

        <TextView
            android:text="@string/contaminant_ppm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:labelFor="@+id/contaminant_ppm_et"
            android:id="@+id/contaminant_ppm_tv"/>

        <TextView
            android:text="@string/virus_ppm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:labelFor="@+id/virus_ppm_et"
            android:id="@+id/virus_ppm_tv"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ppm_ll"
        android:orientation="horizontal"
        android:id="@+id/ppm_entry_ll">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:inputType="number"
            android:nextFocusDown="@+id/virus_ppm_et"
            android:id="@+id/contaminant_ppm_et"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:inputType="number"
            android:id="@+id/virus_ppm_et"/>

    </LinearLayout>

    <TextView
        android:text="@string/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ppm_entry_ll"
        android:layout_marginTop="33dp"
        android:labelFor="@+id/latitude_et"
        android:id="@+id/latitude_tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude_tv"
        android:orientation="horizontal"
        android:id="@+id/latitude_ll">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="numberDecimal"
            android:layout_weight="0.7"
            android:id="@+id/latitude_et"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="bottom"
            android:id="@+id/lat_spinner"/>
   </LinearLayout>

    <TextView
        android:text="@string/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude_ll"
        android:layout_marginTop="12dp"
        android:labelFor="@+id/longitude_et"
        android:id="@+id/longitude_tv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude_tv"
        android:id="@+id/longitude_ll">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:id="@+id/longitude_et"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="bottom"
            android:id="@+id/longitude_spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude_ll"
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        android:id="@+id/button_ll">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onCancelPressed"
            android:id="@+id/cancel_bttn"/>

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onSubmitPressed"
            android:id="@+id/submit_bttn"/>

    </LinearLayout>
</RelativeLayout>